@@ -1,10 +1,11 @@
-package service;
+package Service;
 
-import Models.AuthTokenData;
-import Models.GameData;
-import Models.UserData;
+import models.AuthTokenData;
+import models.GameData;
+import models.UserData;
 import chess.ChessGame;
 import dataaccess.*;
+import org.mindrot.jbcrypt.BCrypt;
 import server.ServerException;
 
 import java.security.SecureRandom;
@@ -16,13 +17,13 @@ public class Service {
     AuthDataAccess authDataAccess;
     GameDataAccess gameDataAccess;
     AuthTokenData authTokenData;
-    private static final SecureRandom secureRandom = new SecureRandom();
-    private static final Base64.Encoder encoder = Base64.getUrlEncoder();
+    private static final SecureRandom SECURE_RANDOM = new SecureRandom();
+    private static final Base64.Encoder ENCODER = Base64.getUrlEncoder();
 
     public Service() {
-        userDataAccess = new MemoryUserDataAccess();
-        authDataAccess = new MemoryAuthDataAccess();
-        gameDataAccess = new MemoryGameDataAccess();
+        userDataAccess = new SqlUserDataAccess();
+        authDataAccess = new SqlAuthDataAccess();
+        gameDataAccess = new SqlGameDataAccess();
     }
 
 
@@ -33,18 +34,34 @@ public class Service {
      * @throws ServerException 403: name already taken
      */
     public AuthTokenData register(UserData userData) throws ServerException {
-        if (userDataAccess.getUserData(userData.username()) == null) {
-
-            userDataAccess.addUserData(userData);
-
-            authTokenData = new AuthTokenData(generateAuthToken(), userData.username());
-
-            authDataAccess.addAuthData(authTokenData);
-
-            return authTokenData;
+        // Input validation on the service level
+        if (userData == null || userData.username() == null || userData.password() == null || userData.email() == null) {
+            throw new ServerException("Error: bad request", 400);
         }
-        else {
-            throw new ServerException("already taken", 403);
+        try {
+            if (userDataAccess.getUserData(userData.username()) == null) {
+                // Hash password
+                String hashedPW = BCrypt.hashpw(userData.password(), BCrypt.gensalt());
+                UserData hashedData = new UserData(userData.username(), hashedPW, userData.email());
+
+                userDataAccess.addUserData(hashedData);
+                authTokenData = new AuthTokenData(generateAuthToken(), hashedData.username());
+                authDataAccess.addAuthData(authTokenData);
+
+                return authTokenData;
+            }else {
+                throw new ServerException("Error: already taken", 403);
+            }
+        } catch (dataaccess.ServerException e) {
+            if (e.getMessage().contains("unauthorized")) {
+                throw new ServerException("Error: "+e.getMessage(), 401);
+            }else if(e.getMessage().contains("taken"))
+            {
+                throw new ServerException("Error: already taken", 403);
+            }
+            else{
+                throw new ServerException("Error: "+e.getMessage(), 500);
+            }
         }
     }
 
@@ -56,14 +73,25 @@ public class Service {
      * @throws ServerException 401
      */
     public AuthTokenData login(String username, String password) throws ServerException {
-        UserData userData = userDataAccess.getUserData(username);
-        if (userData == null) throw new ServerException("unauthorized", 401);
-        if(!userData.password().equals(password)) throw new ServerException("unauthorized", 401);
+        try {
+            UserData userData = userDataAccess.getUserData(username);
+            if (userData == null) {
+                throw new ServerException("unauthorized", 401);
+            }
+            if (!BCrypt.checkpw(password, userData.password())) {
+                throw new ServerException("unauthorized", 401);
+            }
 
-        authTokenData = new AuthTokenData(generateAuthToken(), username);
-        authDataAccess.addAuthData(authTokenData);
+            authTokenData = new AuthTokenData(generateAuthToken(), username);
+            authDataAccess.addAuthData(authTokenData);
 
-        return authTokenData;
+            return authTokenData;
+        } catch (ServerException | dataaccess.ServerException e) {
+            if (e.getMessage().contains("unauthorized")) {
+                throw new ServerException(e.getMessage(), 401);
+            }
+            throw new ServerException(e.getMessage(), 500);
+        }
     }
 
     /**
@@ -72,11 +100,21 @@ public class Service {
      * @throws ServerException 401
      */
     public void logOut(String authToken) throws ServerException {
-        AuthTokenData authData = authDataAccess.getAuthData(authToken);
-        if (authData == null) {
-            throw new ServerException("unauthorized", 401);
+        try {
+            AuthTokenData authData = authDataAccess.getAuthData(authToken);
+            if (authData == null) {
+                throw new ServerException("Error! Auth Token not found", 401);
+            }
+            authDataAccess.removeAuthData(authData);
+        } catch (ServerException | dataaccess.ServerException e) {
+            if (e.getMessage().contains("unauthorized")) {
+                throw new ServerException("Error: "+e.getMessage(), 401);
+            }else if(e.getMessage().contains("not found")){
+                throw new ServerException("Error! Auth Token not found", 401);
+            }else {
+                throw new ServerException("error| "+"Error: " + e.getMessage(), 500);
+            }
         }
-        authDataAccess.removeAuthData(authData);
     }
 
     /**
@@ -86,11 +124,19 @@ public class Service {
      * @throws ServerException 401
      */
     public Collection<GameData> listGames(String authToken) throws ServerException {
-        AuthTokenData authData = authDataAccess.getAuthData(authToken);
-        if (authData != null) {
-            return gameDataAccess.getGameList();
+        try {
+            AuthTokenData authData = authDataAccess.getAuthData(authToken);
+            if (authData != null) {
+                return gameDataAccess.getGameList();
+            }
+            throw new ServerException("unauthorized", 401);
+        } catch (dataaccess.ServerException e) {
+            if(e.getMessage().contains("Authentication token not found")) {
+                throw new ServerException("unauthorized", 401);
+            }else {
+                throw new ServerException(e.getMessage(), 500);
+            }
         }
-        throw new ServerException("unauthorized", 401);
     }
 
     /**
@@ -101,90 +147,129 @@ public class Service {
      * @throws ServerException
      */
     public int createGame(String authToken, String gameName) throws ServerException {
-        // 1. 新增：非空校验 (针对你的 negativeTest)
-        if (gameName == null || gameName.trim().isEmpty()) {
-            throw new ServerException("bad request", 400);
+        if(gameName == null || gameName.isBlank()) {
+            throw new ServerException("Error: bad request", 400);
         }
-
-        AuthTokenData authData = authDataAccess.getAuthData(authToken);
-        if (authData != null) {
-            if (gameDataAccess.getGameByName(gameName) == null) {
-                ChessGame newGame = new ChessGame();
-                int gameID = generateGameID();
-                GameData newGameData = new GameData(gameID, null, null, gameName, newGame);
-                gameDataAccess.createGame(newGameData);
-                return gameID;
+        try {
+            AuthTokenData authData = authDataAccess.getAuthData(authToken);
+            if (authData != null) {
+                if (gameDataAccess.getGameByName(gameName) == null) {
+                    ChessGame newGame = new ChessGame();
+                    int gameID = generateGameID();
+                    while (gameDataAccess.getGameByID(gameID) != null) {
+                        gameID = generateGameID();
+                    }
+                    GameData newGameData = new GameData(gameID, null, null, gameName, newGame);
+                    gameDataAccess.createGame(newGameData);
+                    return gameID;
+                }
+                throw new ServerException("already taken", 403);
             }
-            // 这里建议顺便检查一下：如果是 403 错误，通常 message 首字母是否需要大写？
-            // 你的测试里写的是 "already taken"，这里保持一致即可。
-            throw new ServerException("already taken", 403);
+            throw new ServerException("Error: Unauthorized", 401);
+        } catch (dataaccess.ServerException e) {
+            if(e.getMessage().contains("Authentication token not found")) {
+                throw new ServerException("Error: Unauthorized", 401);
+            }else {
+                throw new ServerException("Error: " + e.getMessage(), 500);
+            }
         }
-        throw new ServerException("unauthorized", 401);
     }
 
     /**
      * joinGame will assign the given user to the selected team color of the chosen game.
      * @param givenAuthData is the user's authData. contains username and authToken.
      * @param teamColor is the team we will assign the player to.
-     * @param gameID is the ID of the game we will try to join........这是为了给lab4凑数
+     * @param gameID is the ID of the game we will try to join.
      */
     public void joinGame(String givenAuthData, ChessGame.TeamColor teamColor, int gameID) throws ServerException {
-        // Check for exceptions
-        AuthTokenData auth = authDataAccess.getAuthData(givenAuthData);
-        if (auth == null) throw new ServerException("unauthorized", 401);
+        try {
+            // Check for exceptions
+            AuthTokenData auth = authDataAccess.getAuthData(givenAuthData);
+            if (auth == null) {
+                throw new ServerException("unauthorized", 401);
+            }
 
-        GameData gameData = gameDataAccess.getGameByID(gameID);
-        if (gameData == null) throw new ServerException("bad request", 400);
+            GameData gameData = gameDataAccess.getGameByID(gameID);
+            if (gameData == null) {
+                throw new ServerException("bad request", 400);
+            }
 
-        // Set the user to the specified team
-        if(teamColor == ChessGame.TeamColor.WHITE){
-            if (gameData.whiteUsername() != null) throw new ServerException("already taken", 403);
-            gameDataAccess.joinGame(auth, ChessGame.TeamColor.WHITE, gameID);
-        }
-        else if (teamColor == ChessGame.TeamColor.BLACK){
-            if (gameData.blackUsername() != null) throw new ServerException("already taken", 403);
-            gameDataAccess.joinGame(auth, ChessGame.TeamColor.BLACK, gameID);
+            // Set the user to the specified team
+            if (teamColor == ChessGame.TeamColor.WHITE) {
+                if (gameData.whiteUsername() != null) {
+                    throw new ServerException("already taken", 403);
+                }
+                gameDataAccess.joinGame(auth, ChessGame.TeamColor.WHITE, gameID);
+            } else if (teamColor == ChessGame.TeamColor.BLACK) {
+                if (gameData.blackUsername() != null) {
+                    throw new ServerException("already taken", 403);
+                }
+                gameDataAccess.joinGame(auth, ChessGame.TeamColor.BLACK, gameID);
+            }
+        } catch (dataaccess.ServerException e) {
+            if(e.getMessage().contains("Authentication token not found")) {
+                throw new ServerException("unauthorized", 401);
+            }else {
+                throw new ServerException(e.getMessage(), 500);
+            }
         }
     }
 
     /**
      * guess what clearApp does to our database
      */
-    public void clearApp() {
-        gameDataAccess.clearGames();
-        userDataAccess.clearUsers();
-        authDataAccess.clearAuthTokens();
+    public void clearApp() throws ServerException {
+        try {
+            gameDataAccess.clearGames();
+            userDataAccess.clearUsers();
+            authDataAccess.clearAuthTokens();
+        } catch (dataaccess.ServerException e) {
+            throw new ServerException("error| "+e.getMessage(), 500);
+        }
     }
 
     /**
      * The following are functions to generate IDs for our application.
      */
-    // The general implementation for this function came from
+    // 该功能的一般实现来自
     // https://stackoverflow.com/questions/13992972/how-to-create-an-authentication-token-using-java
-    // I don't recall us talking about how to do this ourselves, so I used this implementation.
-    private String generateAuthToken() {
+    // 我不记得我们自己讨论过如何做到这一点，所以我采用了这种实现方式。
+    private String generateAuthToken() throws ServerException {
         byte[] randomBytes = new byte[24];
-        secureRandom.nextBytes(randomBytes);
-        String authToken = encoder.encodeToString(randomBytes);
+        SECURE_RANDOM.nextBytes(randomBytes);
+        String authToken = ENCODER.encodeToString(randomBytes);
 
-        // Verify uniqueness
-        if (authDataAccess.getAuthData(authToken) != null) {
-            return generateAuthToken();
+        try {
+            // Verify uniqueness
+            if (authDataAccess.getAuthData(authToken) != null) {
+                return generateAuthToken();
+            }
+        } catch (dataaccess.ServerException e) {
+            if (e.getMessage().contains("not found")) {
+                return authToken;
+            } else {
+                new ServerException(e.getMessage(), 500);
+            }
         }
         return authToken;
     }
 
     private int generateGameID() {
         byte[] randomBytes = new byte[4];
-        secureRandom.nextBytes(randomBytes);
+        SECURE_RANDOM.nextBytes(randomBytes);
         // Turn bytes into integer
         int gameID = Math.abs(java.nio.ByteBuffer.wrap(randomBytes).getInt());
 
-        // Verify uniqueness
-        while (gameDataAccess.getGameByID(gameID) != null) {
-            secureRandom.nextBytes(randomBytes);
-            gameID = java.nio.ByteBuffer.wrap(randomBytes).getInt();
-        }
         return gameID;
+//        try {
+//            // Verify uniqueness
+//            while (gameDataAccess.getGameByID(gameID) != null) {
+//                SECURE_RANDOM.nextBytes(randomBytes);
+//                gameID = java.nio.ByteBuffer.wrap(randomBytes).getInt();
+//            }
+//            return gameID;
+//        } catch (dataaccess.ServerException e) {
+//            throw new ServerException(e.getMessage(), 500);
+//        }
     }
 }
